--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-*,
-*::before,
-*::after {
+* {
   box-sizing: border-box;
   font-family: Gotham Rounded, sans-serif;
   font-weight: normal;
@@ -9,7 +7,11 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, #cbce91ff, #ea738dff);
+  background: linear-gradient(
+    to right,
+    rgba(69, 69, 69, 0.382),
+    rgba(255, 0, 251, 0.452)
+  );
 }
 
 .calculator-grid {
@@ -34,13 +36,13 @@ body {
 
 .span-two {
   grid-column: span 2;
-  color: #adf802;
-  background-color: rgba(139, 0, 139, 0.8);
+  color: #ffffff;
+  background-color: rgb(184, 0, 184);
 }
 
 .output {
   grid-column: 1 / -1;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgb(0, 0, 0);
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
