--- a/style.css
+++ b/style.css
@@ -7,11 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(
-    to right,
-    rgba(69, 69, 69, 0.382),
-    rgba(255, 0, 251, 0.452)
-  );
+  background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
 }
 
 .calculator-grid {
