--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .calculator-grid > button:hover {
-  background-color: #a9a9a9;
+  background-color: #ffffff;
 }
 
 .span-two {
@@ -38,7 +38,7 @@ body {
 
 .output {
   grid-column: 1 / -1;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
@@ -49,11 +49,11 @@ body {
 }
 
 .output .previous-operand {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(0, 0, 0, 0.75);
   font-size: 1.5rem;
 }
 
 .output .current-operand {
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 2.5rem;
 }
