--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.247), rgba(0, 0, 0, 0));
 }
 
 .calculator-grid {
