--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h1 {
 
 .inputs button:hover {
   cursor: pointer;
+  background: url("./images/button.jpg") no-repeat scroll 0 0 transparent;
 }
 
 .is-zero,
