--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url(‘https://fonts.googleapis.com/css?family=Montserrat&display=swap’);
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,500;0,600;1,600&family=Montserrat:wght@700&family=Playfair+Display&family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -28,7 +28,11 @@ body {
 h1 {
   margin-bottom: 1em;
   font-weight: 600;
-  font-family: "Tilt Prism";
+  font-family: "Sigmar One", cursive;
+}
+
+#root span {
+  color: #ed11d7;
 }
 
 .main {
