--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1 {
 .inputs button {
   cursor: grab;
   text-align: center;
-  width: 60px;
+  width: 65px;
   font-size: 25px;
   height: 60px;
   border-radius: 50%;
@@ -91,6 +91,10 @@ h1 {
   color: #8a8a8a;
 }
 
+.is-equals {
+  color: #fff;
+  background-color: #ed11d764 !important;
+}
 .is-zero,
 .is-clear {
   grid-column: span 1;
@@ -108,8 +112,7 @@ h1 {
   background-color: #0368ff83 !important;
 }
 
-.is-clear,
-.is-equals {
+.is-clear {
   color: #fff;
   background-color: #ed11d764 !important;
 }
